@@ -1,3 +1,4 @@
+Made the burner that heats the tea pot not snap to zero when released.
 Fixed an issue with grabbing the bottom of the beaker when it is stacked on top of a block.
 Internationalized the strings.
 Changed the z-order of the light bulbs and beaker so that light energy chunks from the sun go behind them.
